<resources>
    <string name="app_name">Pump\'n\'Smash</string>
    <string name="age">Âge:</string>
    <string name="sexe">Sexe:</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="syst_mesure">Système de Mesure:</string>
    <string name="imperial">Impérial</string>
    <string name="metrique">Métrique</string>
    <string name="taille">Taille:</string>
    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="poids">Poids:</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="formulaireIncomplet">Veuillez remplir la / les section(s):</string>
    <string name="resetOptionsString">Attention toutes vos données seront effacées. Êtes-vous certain de vouloir continuer?</string>
    <string name="resetApp">Reset APP</string>
    <string name="oui">Oui</string>
    <string name="annuler">Annuler</string>
    <string name="fin_entrainement">Fin Entrainement</string>
    <string name="description">Description</string>
    <string name="squat">Squat</string>
    <string name="fentes_statiques">Fentes Statiques</string>
    <string name="calf_raise">Calf Raise</string>
    <string name="leg_extensions">Leg Extensions</string>
    <string name="hamstring_curls">Hamstring Curls</string>
    <string name="aucunExerciceEffectue">Vous n\'avez pas faits d\'exercices. Veuillez cocher les exercices que vous avez complétés.</string>
    <string name="bravo">Bravo!</string>
    <string name="finEntrainementMusculation">Vous avez soulevé un total de:</string>
    <string name="semaine">Semaine</string>
    <string name="mois">Mois</string>
    <string name="annee">Année</string>
    <string name="total">total</string>
    <string name="bras">Bras: \u0020</string>
    <string name="jambes">Jambes: \u0020</string>
    <string name="corps">Corps: \u0020</string>
    <string name="distance">Distance parcourue: \u0020</string>
    <string name="calories">Calories brûlées: \u0020</string>
    <string name="nbExerciesCardio">Nombre d\'exercices cardio: \u0020</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="exercices_musculation">Exercices Musculation:</string>
    <string name="periodeSemaine">Stats Semaine</string>
    <string name="periodeMois">Stats Mois</string>
    <string name="periodeAnnee">Stats Année</string>
    <string name="periodeTotal">Stats</string>
    <string name="pumpnsmash">Pump\'n\'Smash</string>
    <string name="entrainement_cardio">Entrainement Cardio</string>
    <string name="entrainement_musculation">Entrainement Musculation</string>
    <string name="options">Options</string>
    <string name="statistiques">Statistiques</string>
    <string name="brasEntraiment">Bras</string>
    <string name="corpsEntrainement">Corps</string>
    <string name="jambesEntrainement">Jambes</string>
    <string name="reset_app">Reset App</string>
    <string name="textIntroFormulaire">Nous allons vous posez quelques questions afin de mieux vous connaître.</string>
    <string name="suivant">Suivant</string>
    <string name="quitter">Quitter</string>
    <string name="fin">Fin</string>
    <string name="curls_a_la_barre_description">
        Pour augmenter le volume musculaire de vos bras, réalisez ces mouvements au début de votre entraînement de musculation, quand vous avez le plus de force pour prendre lourd !
        Si vous avez des douleurs au niveau des poignets avec une barre droite, préférez la barre coudée aussi appelée barre EZ pour ne pas traumatiser vos articulations. \n\n

        Comment faire les curls a la barre: \n\n
        Debout, les pieds parallèles écartés à la largeur des épaules et légèrement tournés vers l\’extérieur. \n \n
        Tenez une barre à bout de bras devant les cuisses, les mains en supination (paume vers le haut) écartées à peu près à la largeur des épaules. \n \n
        Inspirez profondément, bloquez votre respiration et montez la barre en fléchissant les coudes. \n \n
        Lors de la montée de la charge, gardez les coudes fixes et serrées contre le corps. Assurez-vous que vos mains restent dans l\’alignement des avant-bras.\n \n
        Fléchissez les avant-bras à une cadence modérée. Expirez vers la fin de la flexion. Faites une pause brève en haut du mouvement (quand les mains sont à la hauteur de la partie supérieure des pectoraux).\n \n
        Descendez la barre en la contrôlant pour revenir à la position de départ, mais n\’allez pas jusqu\’à l\’extension complète des bras. \n \n Effectuez toutes les répétitions.
        Gardez le buste vertical pendant toute la durée de l\’exercice.</string>
    <string name="curls_halteres_description">
        Le curl assis incliné avec haltères vous permet de travailler les biceps strictement et sans tricher avec des mouvements de bassin.
        Comme les autres mouvements de biceps avec haltères, cet exercice est parfait pour réduire les déséquilibres entre deux biceps de tailles différentes. \n\n

        Comment faire les curls halteres:\n\n
        Installez-vous sur un banc dont le dossier est relevé à environ 45° et contre lequel votre dos devra être plaqué en permanence.\n\n
        Dans chaque main, tenez un haltère en prise neutre (paumes orientés vers l\’intérieur), les bras tendus et perpendiculaires au sol. \n\n
        Inspirez et bloquez votre respiration lors de la flexion des avant-bras vers les bras. Gardez les bras fixes, ne les laissez pas osciller vers l\’avant. \n\n
        Pour bien solliciter les biceps, vous pouvez tourner lentement les poignets vers l’extérieur à mesure que vos avant-bras se rapprochent de l\’horizontale. \n\n
        En haut du mouvement, les paumes des mains devront être dirigées vers le corps. \n\n
        Expirez et remettez les mains en position neutre tandis que vous revenez à la position de départ. Faites toutes vos répétitions. \n\n
        Le corps doit rester stable de façon à ce que ni le buste, les bras ne bougent au cours de la phase de flexion. \n\n
        Pour que la contraction maximale soit encore plus énergétique, restez en position haute pendant une seconde ou deux en contractant fortement les biceps. \n\n
    </string>
    <string name="extensions_verticales_description">
        Le triceps brachial possède trois faisceaux : trois muscles distincts avec un tendon en commun aux deux extrémités.
        Il recouvre toute la partie arrière du bras. Chaque faisceau est visible quand le muscle est bien développé.
        La partie interne du triceps, difficile à travailler, est située à l\’arrière et sur le côté interne de la partie supérieure du bras, assez proche du coude.
        Le faisceau externe du triceps, qui entre en jeu quand la résistance augmente, est situé à l\’arrière et sur le côté externe du bras.
        La longue portion, située en haut entre le faisceau interne et le faisceau externe, croise à la fois les articulations de l\’épaule et du coude.
        Elle est plus sollicitée au cours de l\’extension du coude quand on adopte une prise neutre et quand le bras est au-dessus de la tête.
        L\’anconé est un petit muscle, relativement difficile à voir qui est situé au niveau de l\’articulation du coude et qui joue un rôle prépondérant lors du verrouillage. \n\n

        Comment faire les extensions verticales: \n\n
        Asseyez-vous sur un banc et gardez le buste droit, les pieds bien à plat sur le sol. \n\n
        Prenez une barre EZ en pronation (paumes dirigées vers l\’avant). Placez vos mains sur la partie serrée inclinée de la barre de façon à ce que vos pouces soient en dessous de vos petits doigts.\n\n
        Levez les bras directement au dessus de la tête en gardant le mains dans l\’alignement de vos avant-bras.\n\n
        Inspirez profondément et maintenez votre souffle en fléchissant vos avant-bras pour descendre la barre derrière vous tout en gardant les coudes pointés vers le haut et le buste droit.\n\n
        Descendez la barre jusqu\’à ce que vous ressentiez un bon étirement au niveau des triceps, puis remontez-la immédiatement au dessus de la tête.\n\n
        Expirez quand vous avez passé la partie la plus difficile du mouvement vers le haut ou lorsque vos bras sont complètement tendus. Marquez une pause ou faites contraction maximale et recommencez.\n\n
        Regardez droit devant vous ou légèrement vers le haut pour maintenir la cambrure normale de votre colonne vertébrale.\n\n
    </string>
    <string name="kickback_description">
        Le mouvement de kickback ou extension arrière pour les triceps est capital non seulement pour les bodybuilders en vue de développer et définir la partie postérieure du bras et de l\’épaule, mais aussi pour les pratiquants de nombreux sports.
        Quand il est exécuté en deux temps, c’est un excellent exercice pour la définition de la longue portion du triceps.
        Les actions d\’extension de l\’articulation du coude et d\’hyperextension de l\’épaule ainsi que des muscles sollicités sont nécessaires dans toutes les activités qui exigent de pousser vers le bas et l\’arrière et les mouvements pour lancer ou frapper.  \n\n

        Comment faire les kickbacks: \n\n
        Debout à côté d\’un banc sur lequel vous placerez une main pour soutenir le haut du corps. Votre bras devra être tendu et directement en-dessous de votre épaule. Amenez la jambe inférieure vers l\’avant et déplacez la jambe extérieure vers l\’arrière de façon à pouvoir incliner le buste à l\’horizontale. Certains préfèrent poser la jambe inférieure sur le banc pour soutenir les hanches.\n\n
        Prenez un haltère en utilisant une prise neutre, pouce vers l\’avant. Gardez le bras le long du corps ou légèrement au-dessus. Fléchissez le coude de façon à ce que votre avant-bras soit vertical.\n\n
        Inspirez légèrement plus que la normale et retenez votre respiration, puis montez la charge tout en gardant le bras immobile. En haut, le bras tendu devra être dans l\’alignement du buste ou légèrement au-dessus. Expirez en fin d\’extension.\n\n
        Maintenez la contraction maximale un instant, puis revenez lentement à la position de départ. Marquez une pause brève et recommencez.\n\n
        Travaillez à vitesse modérée sans lancer l\’haltère vers le haut.\n\n
        Quand vous avez fait le nombre requis de répétitions avec un bras, changez de côté et recommencez avec l\’autre bras.\n\n
    </string>
    <string name="curls_a_la_barre">Curls a la barre</string>
    <string name="curls_halteres">Curls halteres</string>
    <string name="extensions">Extensions</string>
    <string name="kickback">Kickback</string>
    <string name="tirage_menton">Tirage menton</string>
    <string name="textview">TextView</string>
    <string name="notifsOn">Allumé</string>
    <string name="notifsOff">Éteint</string>
    <string name="notifications">Notifications:</string>
</resources>