<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.laurent.goga.bogatu.pumpnsmash.Options">

    <TextView
        android:id="@+id/mesureOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/syst_mesure"
        android:textColor="@color/textColorDark"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notifsOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/notifications"
        android:textColor="@color/textColorDark"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systMesureOptionsRadioGroup" />

    <RadioGroup
        android:id="@+id/systMesureOptionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/metriqueRadioButton"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mesureOptionsTextView">

        <RadioButton
            android:id="@+id/metriqueOptionsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/textColorDarker"
            android:text="@string/metrique"
            android:textColor="@color/textColorDarker"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/imperialOptionsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/textColorDarker"
            android:text="@string/imperial"
            android:textColor="@color/textColorDarker"
            android:textSize="20sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/notifsOptionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/notifsOn"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifsOptionsTextView">

        <RadioButton
            android:id="@+id/notifsOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/textColorDarker"
            android:text="@string/notifsOn"
            android:textColor="@color/textColorDarker"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/notifsOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/textColorDarker"
            android:text="@string/notifsOff"
            android:textColor="@color/textColorDarker"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/resetOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/reset_app"
        android:textColor="@color/textColorLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifsOptionsRadioGroup" />

</android.support.constraint.ConstraintLayout>
